--- a/addonszul/zulmart/views/Menu.xml
+++ b/addonszul/zulmart/views/Menu.xml
@@ -8,14 +8,20 @@
 
         <!-- This Menu Item Must have a parent -->
         <menuitem id="zulmart_barang_menu_categ" 
-                name="barang" 
+                name="Barang" 
               parent="zulmart_menu_root" 
             sequence="10"/>
 
             <!-- This Menu Item Must have a parent -->
             <menuitem id="zulmart_pegawai_menu_categ" 
-                    name="pegawai" 
+                    name="Pegawai" 
                   parent="zulmart_menu_root"
                 sequence="20"/>
 
+          <!-- This Menu Item Must have a parent -->
+<menuitem
+	  id="zulmart_transaksi_menu_categ"
+	  name="Transaksi"
+	  parent="zulmart_menu_root"
+	  sequence="42"/>
 </odoo>
